fixed adventure images stretching on the front page, added linear-graident background to darken the images

--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -110,68 +110,69 @@
   a {
     text-decoration: none;
   }
-  ul {
-  list-style: none;
-  display: inline;
-  padding-left: 0;
-  margin-left: 0;
-  li {
-    h3 a {
-      margin-bottom: 20px;
-    }
-    &:first-child {
-      width: 49%;
-      float: left;
-      img {
-        height: 620px;
-      }
-      h3 a {
-        font-size: 2.75rem;
-        line-height: 1;
-      }
-    }
-    &:nth-child(2) {
-      width: 49%;
-      float:right;
-      img {
-        height: 300px;
-      }
-      h3 a {
-        font-size: 2.25rem;
-        line-height: 1;
-      }
-    }
-    &:nth-child(3) {
-      width: 24%;
-      float: right;
-      margin-left: 1%;
-      margin-top: 1.1%;
-      font-size: 1rem;
-      img {
-        height: 300px;
-      }
-      h3 a {
-        font-size: 1.5rem;
-        line-height: 1;
-      }
-    }
-    &:last-child {
-      width: 24%;
-      float: right;
-      margin-top: 1.1%;
-      img {
-        height: 300px;
-      }
-      h3 a {
-        font-size: 1.5rem;
-        line-height: 1;
-      }
-    }
+  img {
+    max-height: 620px;
+    max-width: none;
+    width: auto;
+    z-index: -1;
+    position: relative;
+    display: block;
   }
+  ul {
+    list-style: none;
+    display: inline;
+    padding-left: 0;
+    margin-left: 0;
+    li {
+      h3 a {
+        margin-bottom: 20px;
+      }
+      &:first-child {
+        width: 49%;
+        float: left;
+        h3 a {
+          font-size: 2.75rem;
+          line-height: 1;
+        }
+      }
+      &:nth-child(2) {
+        width: 49%;
+        float:right;
+        img {
+          height: 300px;
+          width: 100%;
+        }
+        h3 a {
+          font-size: 2.25rem;
+          line-height: 1;
+        }
+      }
+      &:nth-child(3), &:last-child {
+        width: 24%;
+        float: right;
+        margin-left: 1%;
+        margin-top: 1.75%;
+        font-size: 1rem;
+        img {
+          height: 300px;
+        }
+        h3 a {
+          font-size: 1.5rem;
+          line-height: 1;
+        }
+      }
+    }
   }
 }
 .story-wrap {
   position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  .adventure-image{
+    background: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%);
+    padding: 0;
+  }
   .story-info {
     position: absolute;
     top: 0;
